2008-12-19  Vladimir Tzankov  <vtzankov@gmail.com>

	add lisp mutex to every package in threads builds
	* lispbibl.d (struct Package): add pack_mutex in threads builds
	* package.d (make_package): initialize pack_mutex

2008-12-18  Vladimir Tzankov  <vtzankov@gmail.com>

	fix possible memory corruption
	* lispbibl.d, spvw.d (clear_per_thread_symvalues): maygc. should
	acquire threads lock when clears the per thread bindings
	* symbol.d (%PROCLAIM-CONSTANT): preserve GC safety

2008-12-18  Vladimir Tzankov  <vtzankov@gmail.com>

	WITH-LOCK in C (WITH_OS_MUTEX_LOCK, WITH_LISP_MUTEX_LOCK)
	* lispbibl.d (WITH_OS_MUTEX_LOCK, WITH_LISP_MUTEX_LOCK): macros
	for executing statements with mutex lock held and with established
	UNWIND_PROTECT frame ensuring that mutex is unlocked at the end
	* package.d (RENAME-PACKAGE, LIST-ALL-PACKAGES, MAKE-PACKAGE)
	(%IN-PACKAGE, DELETE-PACKAGE, FIND-ALL-SYMBOLS, MAP-ALL-SYMBOLS): use
	WITH_OS_MUTEX_LOCK() with all_packages_lock
	(do_find_all_symbols): do not lock anything - callers hold the lock

2008-12-17  Vladimir Tzankov  <vtzankov@gmail.com>

	add mutex for O(all_packages) in threads builds
	* lispbibl.d (find_pacakge): may trigger GC
	(all_packages_lock): declaration
	* spvw.d (init_multithread): initialize all_packages_lock
	* io.d (read_internal): fix GC safety since find_package() is maygc
	* package.d (make_package, find_package,  do_find_all_symbols)
	(LIST-ALL-PACKAGES, DELETE-PACKAGE, MAP-ALL-SYMBOLS): guard access
	to O(all_packages) via the all_packages_lock
	(RENAME-PACKAGE, %IN-PACKAGE, DELETE-PACKAGE)
	(test_package_arg, correct_packname): fix GC safety since
	find_package() is maygc

2008-12-16  Sam Steingold  <sds@gnu.org>

	* modules/libsvm/svm.cpp (info): call fflush(stdout)
	(info_flush): remove
	patch accepted by upstream

2008-12-16  Sam Steingold  <sds@gnu.org>

	* modules/libsvm/libsvm.lisp (*libsvm-version*): add DEF-C-VAR
	* modules/libsvm/svm.cpp, modules/libsvm/svm.h (libsvm_version): add